--- a/www/styles.css
+++ b/www/styles.css
@@ -18,3 +18,15 @@ color:green;
  width: 25%;
 
 }
+.sorting{
+  color: white;
+  font-weight: bold;
+}
+
+.dt-button{
+  color: black;
+}
+.fa-dollar-sign 
+{
+  color:green;
+}
